# openapi-rust-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.data/compaction-log/: pre-compact-20260708_114332.md  pre-compact-20260708_135135.md
examples/: integ_multi_refresh.rs  integ_real_token.rs  integ_token_refresh.rs  push_example.rs  quote_example.rs  trade_example.rs
proptest-regressions/config/: client_config.txt
proto/: OrderStatusData.proto
src/: error.rs  lib.rs  logger.rs
src/client/: api_request.rs  api_response.rs  decode.rs  errors.rs  http_client.rs  mod.rs  retry.rs
src/client/api_request/: tests.rs
src/client/api_response/: tests.rs
src/client/errors/: tests.rs
src/client/http_client/: tests.rs
src/client/retry/: tests.rs
src/config/: client_config.rs  config_parser.rs  domain.rs  mod.rs  token_manager.rs
src/model/: contract.rs  enums.rs  mod.rs  order.rs  position.rs  quote.rs  quote_requests.rs  serde_helpers.rs  trade.rs  trade_requests.rs
src/push/: callbacks.rs  mod.rs  pb.rs  proto_message.rs  push_client.rs  push_message.rs  tests.rs  varint.rs
src/quote/: mod.rs  tests.rs
src/signer/: mod.rs  sign_content.rs  sign_content_test.rs  signer.rs  signer_test.rs
src/trade/: mod.rs  tests.rs
tests/: push_proto_test.rs  push_varint_proto_test.rs
